--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MTVQA</title>
+  <title>VORA</title>
     <style>
         .hidden {
             display: none;
@@ -11,10 +11,10 @@
   <script src="https://kit.fontawesome.com/f8ddf9854a.js" crossorigin="anonymous"></script>
   <meta charset="utf-8">
   <meta name="description"
-        content="MTVQA: Benchmarking Multilingual Text-Centric Visual Question Answering">
-  <meta name="keywords" content="MTVQA, LMM, LMM Evaluation, Vision Language Model, Large Language Model, Large Multimodal Model, artificial intelligence, AI, AGI, artificial general intelligence">
+        content="VORA: Vision as LoRA">
+  <meta name="keywords" content="VORA, LMM, MLLM, Vision Language Model, Large Language Model, Large Multimodal Model, artificial intelligence, AI, AGI, artificial general intelligence">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> MTVQA: Benchmarking Multilingual Text-Centric Visual Question Answering</title>
+  <title> VORA: Vision as LoRA</title>
 
   <link rel="icon" href="./static/images/mtvqa_icon.png">
 
@@ -208,6 +208,22 @@
         </div>
     </div>
   </div>
+</section>
+ <section class="section">
+  <div class="container" style="margin-bottom: 2vh;">
+    <!-- Abstract. -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">🔔News</h2>
+        <div class="content has-text-justified">
+          <p>
+            <a href="https://huggingface.co/collections/Hon-Wong/vora-67ee34c9d32e9ac2358106ae" target="_blank"><b>🔥2025-04-04: VoRA Weights are released! 😆</b></a>
+          </p>
+      </div>      
+      </div>
+    </div>
+    <!--/ Abstract. -->
+</div>
 </section>
 
 <section class="section">
