--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
         <div class="content has-text-centered">
-          <img src="static/images/all_examples.png" alt="overview examples" width="100%"/>
-          <p> Multilingual text-centric VQA example visualization for each language.</p>
+          <img src="static/images/framework.gif" alt="overview" width="100%"/>
+          <p> Overview of vision as lora.</p>
         </div>
         <div class="content has-text-centered">
           <img src="static/images/distribution_overview.png" alt="overview distribution" width="100%"/>
