--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <a href="https://github.com/sty-yyj/sty-yyj.github.io" style="text-decoration: none; color: inherit;">Yongjie Ye<sup style="color:#007bff;">1</sup></a>
               ,
             </span>
-            <span class="author-block">Bingru Li<sup style="color:#007bff;">1</sup>,</span><br>
+            <span class="author-block">Bingru Li<sup style="color:#007bff;">1</sup>,</span>
             <span class="author-block">Yuxiang Nie<sup style="color:#007bff;">1</sup>,</span><br>
             <span class="author-block">
               <a href="https://georgeluimmortal.github.io/" style="text-decoration: none; color: inherit;">Jinghui Lu<sup style="color:#007bff;">1</sup></a>
@@ -84,7 +84,7 @@
               <a href="https://scholar.google.com/citations?user=OxQXSioAAAAJ&hl=zh-CN" style="text-decoration: none; color: inherit;">Jingqun Tang<sup style="color:#007bff;">1</sup></a>
               ,
             </span>
-             <span class="author-block">Yanjie Wang<sup style="color:#007bff;">1</sup>,</span><br>
+             <span class="author-block">Yanjie Wang<sup style="color:#007bff;">1</sup>,</span>
             <span class="author-block">
               <a href="https://orcid.org/0009-0006-9126-3069" style="text-decoration: none; color: inherit;">Can Huang<sup style="color:#007bff;">1</sup></a>      
             </span>
@@ -162,14 +162,19 @@
   </style>
 <section class="hero teaser">
   <div class="container is-max-desktop">
+    <div class="columns">  <!-- 添加columns容器 -->
+      <div class="column">  <!-- 第一个内容块 -->
         <div class="content has-text-centered">
           <img src="static/images/framework.gif" alt="overview" width="100%"/>
           <p> Overview of vision as lora.</p>
         </div>
+      </div>
+      <div class="column">  <!-- 第二个内容块 -->
         <div class="content has-text-centered">
           <img src="static/images/distribution_overview.png" alt="overview distribution" width="100%"/>
           <p> <b>Left:</b> overview of various categories of text-rich images. <b>Right:</b> image and QA pairs distribution over the 9 languages in VoRA benchmark.</p>
         </div>
+      </div>
     </div>
   </div>
 </section>
