--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@
       <div class="column">  <!-- 第一个内容块 -->
         <div class="content has-text-centered">
           <img src="static/images/framework.gif" alt="overview" width="100%"/>
-          <p> Overview of vision as lora.</p>
+          <p> <b>Overview of VoRA.<b></p>
         </div>
       </div>
       <div class="column">  <!-- 第二个内容块 -->
         <div class="content has-text-centered">
-          <img src="static/images/distribution_overview.png" alt="overview distribution" width="100%"/>
-          <p> <b>Left:</b> overview of various categories of text-rich images. <b>Right:</b> image and QA pairs distribution over the 9 languages in VoRA benchmark.</p>
+          <img src="static/images/comparison.png" alt="overview distribution" width="100%"/>
+          <p> <b>Comparison of VoRA with Encoder-based MLLM</b></p>
         </div>
       </div>
     </div>
