--- a/index.html
+++ b/index.html
@@ -162,17 +162,21 @@
   </style>
 <section class="hero teaser">
   <div class="container is-max-desktop">
-    <div class="columns">  <!-- 添加columns容器 -->
-      <div class="column">  <!-- 第一个内容块 -->
+    <!-- 添加 is-multiline 和 is-vcentered -->
+    <div class="columns is-multiline is-vcentered">
+      <!-- 第一个内容块 -->
+      <div class="column is-half-tablet is-half-desktop">
         <div class="content has-text-centered">
           <img src="static/images/framework.gif" alt="overview" width="100%"/>
-          <p> <b>Overview of VoRA.<b></p>
+          <p><b>Overview of VoRA.</b></p>
         </div>
       </div>
-      <div class="column">  <!-- 第二个内容块 -->
+      
+      <!-- 第二个内容块 -->
+      <div class="column is-half-tablet is-half-desktop">
         <div class="content has-text-centered">
-          <img src="static/images/comparison.png" alt="overview distribution" width="100%"/>
-          <p> <b>Comparison of VoRA with Encoder-based MLLM</b></p>
+          <img src="static/images/comparison.png" alt="comparison" width="100%"/>
+          <p><b>Comparison of VoRA with Encoder-based MLLM.</b></p>
         </div>
       </div>
     </div>
