--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         content="VoRA: Vision as LoRA">
   <meta name="keywords" content="VoRA, LMM, MLLM, Vision Language Model, Large Language Model, Large Multimodal Model, artificial intelligence, AI, AGI, artificial general intelligence">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> VoRA: Vision as LoRA</title>
+  <title>Vision as LoRA</title>
 
   <link rel="icon" href="./static/images/VoRA_icon.png">
 
@@ -162,13 +162,17 @@
   </style>
 <section class="hero teaser">
   <div class="container is-max-desktop">
+    <div class="content has-text-centered">
+          <img src="static/images/framework.gif" alt="animation" width="100%"/>
+          <p> Demonstration of how VoRA works.</p>
+        </div>
     <!-- 添加 is-multiline 和 is-vcentered -->
     <div class="columns is-multiline is-vcentered">
       <!-- 第一个内容块 -->
       <div class="column is-half-tablet is-half-desktop">
         <div class="content has-text-centered">
-          <img src="static/images/framework.gif" alt="overview" width="100%"/>
-          <p><b>Overview of VoRA.</b></p>
+          <img src="static/images/overview.png" alt="overview" width="100%"/>
+          <p>Architecture of VoRA.</p>
         </div>
       </div>
       
@@ -176,7 +180,7 @@
       <div class="column is-half-tablet is-half-desktop">
         <div class="content has-text-centered">
           <img src="static/images/comparison.png" alt="comparison" width="100%"/>
-          <p><b>Comparison of VoRA with Encoder-based MLLM.</b></p>
+          <p>Comparison of VoRA with Encoder-based MLLM.</p>
         </div>
       </div>
     </div>
