--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="https://kit.fontawesome.com/f8ddf9854a.js" crossorigin="anonymous"></script>
   <meta charset="utf-8">
   <meta name="description"
-        content="VoRA: Vision as LoRA">
+        content="Vision as LoRA">
   <meta name="keywords" content="VoRA, LMM, MLLM, Vision Language Model, Large Language Model, Large Multimodal Model, artificial intelligence, AI, AGI, artificial general intelligence">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Vision as LoRA</title>
@@ -194,11 +194,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">🔔News</h2>
         <div class="content has-text-justified">
-          <p>
-            <b>🚀[2024-06-04]: We are excited to launch VoRA, the first multilingual visual text comprehension evaluation benchmark for MLLMs! VoRA includes 9 widely-used but low-resource languages, i.t., AR, DE, FR, IT, JA, KO, RU, TH, and VI</a>!🌟</b>
-          </p>
-          <p>
-            <b>🔥[2023-06-04]: GPT-4o achieves the best performance overall, MiniCPM-V2.5 achieves the best performance among open-source models! 😆</b>
+            <b>🔥[2025-04-04]: We are excited to release [VoRA Weights and data](https://huggingface.co/collections/Hon-Wong/vora-67ee34c9d32e9ac2358106ae). 😆</b>
           </p>
       </div>      
         <h2 class="title is-3">Introduction</h2>
@@ -775,13 +771,11 @@
   <div class="container is-max-desktop content">
     <h2 class="title is-3 has-text-centered">BibTeX</h2>
     <pre><code>
-      @misc{tang2024VoRA,
-        title={VoRA: Vision as LoRA}, 
-        author={Jingqun Tang and Qi Liu and Yongjie Ye and Jinghui Lu and Shu Wei and Chunhui Lin and Wanqing Li and Mohamad Fitri Faiz Bin Mahmood and Hao Feng and Zhen Zhao and Yanjie Wang and Yuliang Liu and Hao Liu and Xiang Bai and Can Huang},
-        year={2024},
-        eprint={2405.11985},
-        archivePrefix={arXiv},
-        primaryClass={cs.CV}
+      @article{wang2025vision,
+        title={Vision as LoRA},
+        author={Wang, Han and Ye, Yongjie and Li, Bingru and Nie, Yuxiang and Lu, Jinghui and Tang, Jingqun and Wang, Yanjie and Huang, Can},
+        journal={arXiv preprint arXiv:2503.20680},
+        year={2025}
       }
 </code></pre>
   </div>
