--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <span class="mmmu" style="vertical-align: middle">VoRA</span>
             </h1>
           <h2 class="subtitle is-3 publication-subtitle">
-            VoRA: Vision as LoRA 
+            Vision as LoRA 
           </h2>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
@@ -194,8 +194,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">🔔News</h2>
         <div class="content has-text-justified">
-            <b>🔥[2025-04-04]: We are excited to release [VoRA Weights and data](https://huggingface.co/collections/Hon-Wong/vora-67ee34c9d32e9ac2358106ae). 😆</b>
-          </p>
+            <p>🔥[2025-04-04]: We are excited to release <a href="https://huggingface.co/collections/Hon-Wong/vora-67ee34c9d32e9ac2358106ae">VoRA Weights and data</a> 😆</p>
       </div>      
         <h2 class="title is-3">Introduction</h2>
         <div class="content has-text-justified">
