--- a/index.html
+++ b/index.html
@@ -209,11 +209,15 @@
     <!--/ Abstract. -->
 </div>
 </section>    
+<section class="hero is-light is-small">
+  <div class="hero-body has-text-centered">
+    <h1 class="title is-1 mmmu">Core Methodology</h1>
+  </div>
+</section>
 <section class="section">
   <div class="container">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Core Methodology</h2>
         <div class="content has-text-justified">
           <div class="content">
           <h3 class="title is-4">1. Vision as LoRA</h3>
@@ -249,18 +253,20 @@
         <h2 class="title is-3">Experimental Results</h2>
         <div class="content has-text-justified">
           <h3 class="title is-4">Key Findings</h3>
-            <ul>
-              <li>Achieves 55.6 average score across 8 benchmarks (TQA, POPE, MME, etc.)</li>
-              <li>Reduces training steps by 35.5% compared to vanilla LoRA</li>
-              <li>Supports native-resolution inputs (VoRA-AnyRes variant)</li>
-            </ul>
-            <h3 class="title is-4">Benchmark Comparison</h3>
-            <table class="table is-bordered is-striped">
-              <tr><th>Method</th><th>VQAv2</th><th>MMB</th><th>MMVet</th><th>RQA</th></tr>
-              <tr><td>LLaVA-1.5</td><td>78.5</td><td>64.3</td><td>31.1</td><td>54.8</td></tr>
-              <tr><td>VoRA</td><td>76.0</td><td>64.2</td><td>33.7</td><td>65.6</td></tr>
-              <tr><td>VoRA-AnyRes</td><td>76.0</td><td>61.3</td><td>33.7</td><td>61.1</td></tr>
-            </table>
+          <ul>
+            <li>Achieves 55.6 average score across 8 benchmarks (TQA, POPE, MME, etc.)</li>
+            <li>Reduces training steps by 35.5% compared to vanilla LoRA</li>
+            <li>Supports native-resolution inputs (VoRA-AnyRes variant)</li>
+          </ul>
+
+          <h3 class="title is-4">Benchmark Comparison</h3>
+          <table class="table is-bordered is-striped">
+            <tr><th>Method</th><th>VQAv2</th><th>MMB</th><th>MMVet</th><th>RQA</th></tr>
+            <tr><td>LLaVA-1.5</td><td>78.5</td><td>64.3</td><td>31.1</td><td>54.8</td></tr>
+            <tr><td>VoRA</td><td>76.0</td><td>64.2</td><td>33.7</td><td>65.6</td></tr>
+            <tr><td>VoRA-AnyRes</td><td>76.0</td><td>61.3</td><td>33.7</td><td>61.1</td></tr>
+          </table>
+  
         </div>
     </div>
     </div>
