--- a/index.html
+++ b/index.html
@@ -265,12 +265,16 @@
     <div class="columns is-centered m-6">
       <div class="column is-full has-text-centered content">
         <h2 class="title is-3">Key Findings</h2>
+        <div class="content has-text-justified">
+          <div class="content">
         <ul>
           <li>Achieves 55.6 average score across 8 benchmarks (TQA, POPE, MME, etc.). When trained with a proper scale of additional data, VoRA matches conventional encoder-based MLLMs in terms of performance while reducing computational costs, demonstrating that LLMs can acquire native multimodal capabilities without external vision models. This challenges the widely perceived necessity of encoder-based architectures for multimodal tasks. </li>
           <li>Vision as LoRA can stablize the vision internalization process.</li>
           <li>Supports native-resolution inputs (VoRA-AnyRes variant).</li>
           <li>Extensive ablations validate the effectiveness of each component.</li>
         </ul>
+        </div>
+        </div>
         <div id="results-carousel" class="carousel results-carousel">
           <div class="box m-5">
             <div class="content has-text-centered">
