--- a/index.html
+++ b/index.html
@@ -335,6 +335,24 @@
           <p> Case demonstration.</p>
         </div>
       </div>
+      <div class="box m-5">
+        <div class="content has-text-centered">
+          <img src="static/images/goodcase3.png" alt="grade-lv" width="60%"/>
+          <p> Case demonstration.</p>
+        </div>
+      </div>
+      <div class="box m-5">
+        <div class="content has-text-centered">
+          <img src="static/images/goodcase4.png" alt="grade-lv" width="60%"/>
+          <p> Case demonstration.</p>
+        </div>
+      </div>
+      <div class="box m-5">
+        <div class="content has-text-centered">
+          <img src="static/images/goodcase5.png" alt="grade-lv" width="60%"/>
+          <p> Case demonstration.</p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
