--- a/index.html
+++ b/index.html
@@ -325,6 +325,12 @@
     <div id="results-carousel" class="carousel results-carousel">
       <div class="box m-5">
         <div class="content has-text-centered">
+          <img src="static/images/goodcase0.png" alt="grade-lv" width="60%"/>
+          <p> Case demonstration.</p>
+        </div>
+      </div>
+      <div class="box m-5">
+        <div class="content has-text-centered">
           <img src="static/images/goodcase1.png" alt="grade-lv" width="60%"/>
           <p> Case demonstration.</p>
         </div>
